# Portable-Digital-Audio-Workstation-PoDAW-

./: .gitignore  .gitmodules  AudioHandler.cpp  AudioHandler.hpp  Bass.cpp  Bass.hpp  CMakeLists.txt  Drums.cpp  Drums.hpp  GpioInputs.cpp  GpioInputs.hpp  Guitar.cpp  Guitar.hpp  IndividualTrack.cpp  IndividualTrack.hpp  Inputs.cpp  Inputs.hpp  InstallationLog.txt  Instrument.cpp  Instrument.hpp  KeyboardInputs.cpp  KeyboardInputs.hpp  MidiHandler.cpp  MidiHandler.hpp  MidiMessage.hpp  MidiPlayer.cpp  MidiPlayer.hpp  MidiRecorder.cpp  MidiRecorder.hpp  MidiRecording.hpp  Midi_Recording_Utils.hpp  Note.cpp  Note.hpp  Piano.cpp  Piano.hpp  README.md  Sequencer.cpp  Sequencer.hpp  SequencerUI.cpp  SequencerUI.hpp  (+13 more)
